--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+runtime/debug/*.a filter=lfs diff=lfs merge=lfs -text
 runtime/debug/librive.a filter=lfs diff=lfs merge=lfs -text
 runtime/debug/librive_harfbuzz.a filter=lfs diff=lfs merge=lfs -text
